<resources>
    <string name="app_name">DnD App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Adventurer Compendium</string>

    <string name="dice">Dice Roller</string>
    <string name="stats">Character Stats</string>
    <string name="spell">Spell Search</string>
    <string name="item">Item Search</string>

    <string name="search">Search</string>

    <string name="save">Save Player</string>
    <string name="load">Load Player</string>

    <string name="diceTitle">Dice Roller</string>
    <string name="dieType">Die Type</string>

    <string name="numDice">Number of Dice</string>
    <string name="roll">1 d 4</string>

    <string name="strength">Str</string>
    <string name="dex">Dex</string>
    <string name="con">Con</string>
    <string name="intl">Int</string>
    <string name="wis">Wis</string>
    <string name="cha">Cha</string>

    <string name="charName">Character Name</string>
    <string name="level">Level</string>
    <string name="ac">AC</string>
    <string name="maxHP">Max HP</string>
    <string name="hp">HP</string>
    <string name="rollstats">Roll Stats</string>
    <string name="gotoskills">Check Skills</string>

    <string name="acrobatics">Acrobatics:</string>
    <string name="animal">Animal Handling:</string>
    <string name="arcana">Arcana:</string>
    <string name="athletics">Athletics:</string>
    <string name="deception">Deception:</string>
    <string name="history">History:</string>
    <string name="insight">Insight:</string>
    <string name="intimidation">Dex</string>
    <string name="investigation">Con</string>
    <string name="medicine">Int</string>
    <string name="nature">Wis</string>
    <string name="perception">Cha</string>
    <string name="performance">Str</string>
    <string name="persuasion">Dex</string>
    <string name="religion">Con</string>
    <string name="sleight">Int</string>
    <string name="stealth">Wis</string>
    <string name="survival">Wis</string>

    <string name="track">Current Track:</string>
    <string name="play">Play</string>
    <string name="soundboard">Sound Board</string>

    <string-array name="backgroundMusicList">
        <item>Dungeon</item>
        <item>Battle</item>
        <item>Goblin Cave</item>
        <item>Nice Village</item>
        <item>Spooky Village</item>
        <item>Tavern</item>
    </string-array>



</resources>
