<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E000000"
    tools:context=".homescreen" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dice"
        android:layout_width="700px"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/stats"
        android:layout_width="700px"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice" />

    <Button
        android:id="@+id/spell"
        android:layout_width="700px"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/spell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats" />

    <Button
        android:id="@+id/item"
        android:layout_width="700px"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spell" />

</androidx.constraintlayout.widget.ConstraintLayout>